--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="row">
       <td align="center">
       <font face="times new roman" size="5" color="#ffbd5b">
-      <a href="index.html">Home </a> |<a href="the story.html"> The Story </a> | <a href="A brief history of Dutchies in Australia.html"> A Brief History of "Dutchies" in Australia </a> | <a href="interview with jan and mieke Bylstra.html"> Interview with Jan and Mieke Bylstra </a>
+      <a href="index.html">Home </a> |<a href="the story.html"> The Story </a> | <a href="A brief history of Dutchies in Australia.html"> A Brief History of "Dutchies" in Australia </a> | <a href="interview with jan and mieke bylstra.html"> Interview with Jan and Mieke Bylstra </a>
       </font>
 
 <br>
@@ -103,8 +103,8 @@ So thoroughly and effectively have they blended into Australian society and cult
 <p>This author’s grandparents, among many thousands of others, were not quite so fortunate.</p>
 <br>
 <p> Read on <a href="the story.html"> here</a>. </p>
-<p> Explore our interactive Dutch-Australian timeline <a href="a brief history of Dutchies in Australia.html"> here</a>. </p>
-<p> Discover the full story of Jan and Mieke Bylstra <a href="interview with Jan and Mieke Bylstra.html"> here</a>. </p></font>
+<p> Explore our interactive Dutch-Australian timeline <a href="A brief history of Dutchies in Australia.html"> here</a>. </p>
+<p> Discover the full story of Jan and Mieke Bylstra <a href="interview with jan and mieke bylstra.html"> here</a>. </p></font>
 
 </div>
   </div>
